# curator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  curator.yaml  pyproject.toml
.github/workflows/: curator-scan.yml  tests.yml
agent/: EVOLUTION_LOG.md  ROLE.md  agent.yaml
agent/memory/: CONTEXT.md  DECISIONS.md  HISTORY.md  VOCABULARY.md
agent/skills/evo/: SKILL.md
docs/: architecture.md  configuration.md  pipeline.md
src/curator/: __init__.py  cli.py  pipeline.py
src/curator/analyzer/: detector.py
src/curator/collector/: parser.py  scanner.py
src/curator/core/: config.py  models.py
src/curator/proposer/: engine.py
tests/: test_config.py  test_detector.py  test_parser.py  test_pipeline.py  test_proposer.py  test_scanner.py
